--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -36,58 +36,62 @@
 }
 
 .chat__message {
-  position: relative;
-  font-size: 16px;
-  padding: 10px;
-  width: fit-content;
-  border-radius: 10px;
   background-color: #ffffff;
+  border-radius: 10px;
+  font-size: 16px;
   margin-bottom: 30px;
+  padding: 10px;
+  position: relative;
+  width: fit-content;
 }
 
 .chat__receiver {
-  margin-left: auto;
   background-color: #dcf8c6;
+  margin-left: auto;
 }
 
 .chat__timestamp {
+  font-size: x-small;
   margin-left: 10px;
-  font-size: xx-small;
 }
 
 .chat__name {
+  font-size: xx-small;
+  font-weight: 800;
   position: absolute;
   top: -15px;
-  font-weight: 800;
-  font-size: xx-small;
 }
 
 .chat__footer {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  height: 62px;
   border-top: 1px solid lightgray;
+  display: flex;
+  height: 62px;
+  justify-content: space-between;
 }
 
 .chat__footer > form {
-  flex: 1;
   display: flex;
+  flex: 1;
 }
 
 .chat__footer > form > input {
+  border-radius: 30px;
+  border: none;
   flex: 1;
   outline-width: 0;
-  border-radius: 30px;
   padding: 10px;
-  border: none;
 }
 
 .chat__footer > form > button {
-  display: none;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
-.chat__footer > .MuiSvgIcon-root {
-  padding: 10px;
+.chat__footer .MuiSvgIcon-root {
+  border: none;
   color: gray;
+  cursor: pointer;
+  padding: 0px 10px;
 }
